--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.11",
         "phpmailer/phpmailer": "^6.8",
+        "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
