--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "livewire/livewire": "^2.11",
         "phpmailer/phpmailer": "^6.8",
         "phpoffice/phpspreadsheet": "^1.29",
+        "spatie/laravel-html": "^3.2",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
